# alisaie

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
alisaie-api/: Cargo.toml  README.md
alisaie-api/src/: error.rs  lib.rs
alisaie-api/src/models/: character.rs  mod.rs
alisaie-api/src/models/search/: character.rs  mod.rs
alisaie-bot/: Cargo.toml
src/: main.rs
src/commands/: ping.rs
