[package]
name = "alisaie-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
ffxiv_types = { version = "1.9.0", features = ["with_serde"] }
reqwest = "0.11.17"
serde = { version = "1.0.162", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
url = "2.3.1"
url_serde = "0.2.0"
