[package]
name = "alisaie-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
ffxiv_types = { version = "1.9.0", features = ["with_serde"] }
reqwest = "0.11.17"
serde = { version = "1.0.162", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
thiserror = "1.0.40"
url = { version = "2.3.1", features = ["serde"] }
