[package]
name = "alisaie-bot"
version = "0.1.0"
authors = ["j1nxie <rylieeeeexd@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serenity = { version = "0.11.5", features = ["client", "gateway", "rustls_backend", "model"], default-features = false }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
